--- a/gb/23/5/31/n14007023.md
+++ b/gb/23/5/31/n14007023.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>太空保险业者谈火箭发射成功率</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/05/id14007029-starship-600x400.jpg" />
-<h6>2023年4月20日，SpaceX公司的以超重型火箭为助推器的“星舰一号”飞船在美国德州Boca Chica发射升空。(PATRICK T. FALLON/AFP via Getty Images)
-</h6>
+<h6>2023年4月20日，SpaceX公司的以超重型火箭为助推器的“星舰一号”飞船在美国德州Boca Chica发射升空。(PATRICK T. FALLON/AFP via Getty Images)</h6>
 <hr>
 	<p>【大纪元2023年05月31日讯】（大纪元记者林达编译报导）火箭发射可能会出现很多问题，并成为轰动性头条新闻。然而，几十年来，发射故障率却保持出奇地一致，且有其特殊的规律。</p>
 <p>星舰一号（Starship One）是商业航天机构SpaceX迄今为止最大的一次发射。这是一个极具未来感的星际飞船，其测试模型安装在巨大的超重型火箭的顶部，它的首次发射是全球翘首以待的焦点。 2023年4月20日，在美国德州博卡奇卡（Boca Chica）发射台，当火箭在巨大烟雾和灰尘中升空时，开启了太空探索的新纪元。</p>
@@ -22,7 +21,7 @@
 <p>“载人飞船发射失败率通常较低，约为2%，并只有1%左右完全没有进入轨道，”大卫·托德（David Todd）说，托德是航天行业的分析师，自1957年Sputnik人造卫星发射以来，一直在跟踪地球轨道火箭的发射。“这种较低的失败率是因为，大量这些载人发射都使用了俄罗斯联盟号火箭（Soyuz rocket），它持续使用了几十年，非常可靠。当然也是因为，对于载人发射，大家都会格外小心。”</p>
 <p>“顺便说一下，我们将2003年哥伦比亚航天飞机（Columbia Space Shuttle）在返航进入大气层时解体的事故算作‘发射失败’，因为其原因是在发射过程中隔热系统出了故障。另外，值得注意的是，载人航天器携带发射逃生系统，可以在发射失败时拯救宇航员——1975年的联盟18A事故就是一例。”</p>
 <p>2022年全年，SpaceX 以每六天一枚的速度成功发射了猎鹰9号火箭。新西兰——太空发射上的无名小卒——也从北岛东海岸的一个羽翼未丰的太空港成功发射了九枚火箭。</p>
-<figure id="attachment_14007031" aria-describedby="caption-attachment-14007031" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/05/id14007031-landing-e1685500674982.jpg"><img decoding="async" class="size-large wp-image-14007031" src="https://i.epochtimes.com/assets/uploads/2023/05/id14007031-landing-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14007031" class="wp-caption-text">2016年4月8日，SpaceX公司的“猎鹰9号”火箭第一次成功回收并垂直降落在大西洋上的一个平台上。(NASA via Getty Images)</figcaption></figure>
+<figure id="attachment_14007031" aria-describedby="caption-attachment-14007031" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/05/id14007031-landing-e1685500674982.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14007031" src="https://i.epochtimes.com/assets/uploads/2023/05/id14007031-landing-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14007031" class="wp-caption-text">2016年4月8日，SpaceX公司的“猎鹰9号”火箭第一次成功回收并垂直降落在大西洋上的一个平台上。(NASA via Getty Images)</figcaption></figure>
 <p><strong>太空保险领域的挑战</strong></p>
 <p>这一系列新的发射事件为相对较新的太空保险领域带来了有趣的挑战；韦德以即将发射的欧洲航天局（ESA）火箭阿丽亚娜6号（Ariane 6）为例。 “如果我们现在被要求为阿丽亚娜6号卫星提供保险，比如说针对其第三次发射的保险，那我们可能会说，‘好吧，我们的报价要以之前的两次成功为前提，对吧？’如果其中一个失败了，我们的报价就要改变。”</p>
 <p>韦德说，先进的计算机建模和数十年将火箭送入轨道的经验意味着设计师对发射结果有了更好的预期。但是每个新的发射系统都有未知数，在它第一次发射之前其行为只能是假设的。</p>
@@ -39,34 +38,34 @@
 <p>“其中一个问题是发展进步，”托德说。 “火箭一开始会很糟，发展也不顺利，但最终它会变得很好。然后，火箭设计师会被要求制造更好的火箭，这样他们便重新开始新的周期。”</p>
 <p>与此同时，韦德发现了隐藏在数据中的另一个有趣模式：失败的可能性在第六次发射时突然上升。“我们通常会看到，前10次飞行中有两次失败，第一次和第二次的失败率通常约为30%。然后它沿着一条漂亮的曲线下降。第六次飞行的失败率突然升高，而且很难确切地知道为什么，可能是在那个阶段，你开始进入常规制造，也许质量控制还没有完全到位。◇#</p>
 <p>责任编辑：叶紫微</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380510.md#1">川普联手马斯克 确保美国在太空领先中国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379683.md#1">细嘴杓鹬或已消失 欧亚大陆首个鸟类灭绝案例</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379473.md#1">科学家发现某些记忆并不存在于大脑中</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379549.md#1">新研究：封闭环境和压力改变太空人的味觉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11208751.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(4)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/5/n3675948.md#1" target="_blank">中共酷刑：对伤口的摧残</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/30/n11290434.md#1" target="_blank">【征文】爱德华：金门战役共军惨败之迷</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781787.md#1">苏轼美食路线图：猪羊肉鲜果牡蛎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/16/n12625448.md#1">【元曲大家】马致远的命运三部曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14379252.md#1">《你在哪里》：当真相成为罪行 该如何捍卫正义？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/22/n14376606.md#1">【未解之谜】史前文明存在的铁证？“时空错乱”的神秘文物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372824.md#1">“好事多磨”——谈耐心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373339.md#1">【思想领袖】下一次疫情 世界会再次封锁吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361858.md#1">【全球新闻】美国新任贸易代表强硬抗共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361855.md#1">【中国禁闻】华为新手机鸿蒙系统有猫腻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378561.md#1">黄晓明新片上映9天被下架 票房仅410万人民币</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378534.md#1">王友群：中共亡党前的再折腾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378683.md#1">宇宙烟火秀 两星系以200万英里时速相撞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14379387.md#1">晒与78岁母亲合照 邓超发文调皮表达爱意</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378650.md#1">周星驰《女足》演员阵容引关注 宋康昊或参演</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378605.md#1">谭咏麟紧急喊停大陆个唱 憔悴露面透露病情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378904.md#1">韩剧《爱在独木桥》播出两集 收视率翻倍成长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375246.md#1">为什么说咖啡给你的能量只是借给你的</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372623.md#1">秋冬必吃十种润肺抗炎饮食 提升免疫功能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378137.md#1">专家：睡觉时整晚开着暖气 破财又伤身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379667.md#1">什么是“第二城市旅游”？ 有何好处？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375220.md#1">50岁后健康不走下坡路 四招抗老这样做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/5/31/n14007023.htm">太空保险业者谈火箭发射成功率</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/5/31/n14007023.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
